# hydra

./: .gitignore  CMakeLists.txt  Doxyfile.in  INSTALL  Makefile_old  README
cmake/modules/: FindARGTABLE2.cmake  FindGSL.cmake  FindHDF5.cmake  FindLWL.cmake  UseDoxygen.cmake
scripts/: cpy_h.sh  make_movie.sh  make_radial_to_splot.sh  make_radial_to_splot2.sh  script.gp  snapshot_to_png.sh  snapshot_to_png_template.gp  snapshot_to_splot_png.sh  snapshot_to_splot_png_template.gp  test.sh
src/: CMakeLists.txt  h_amrp.c  h_amrp.h  h_grids.c  h_grids_common.h
src/backup_and_read/: backup.c  backup.h  read.c  write.c
src/backup_and_save/: backup.c  backup.h  read.c  save.c
src/common/: amrp_common.c  amrp_common.h  fnc_common.c  fnc_common.h  grids_common.c  grids_common.h  h_types.h  hms_common.c  hms_common.h  pos_common.c  pos_common.h  types.h  utils_common.c  utils_common.h
src/create_grid/: create_grid.c  create_grid.h  flag_criterion.c  flag_criterion.h  flagging.c  flagging.h
src/der_fda/: derivs.h
src/derivs_fda/: derivs.c  derivs.h  derivs_3pts.c  derivs_5pts.c
src/error_log/: error_printf.c  error_printf.h
src/gener_grid/: h_generate_grid.c  h_generate_grid.h
src/integrate/: boialg.c  boialg.h  step.c  step.h  update.c  update.h
src/interpolate/: interpolate.c  interpolate.h
src/ivp/: ivp_1D.c  ivp_1D.h
src/plot/: gnuplot_i.h  h_plot_1D.c  h_plot_1D.h
src/plot_data/: gnuplot_i.c  plot_1D.c  plot_1D.h  plot_save_1D.c  plot_save_eps.c
src/regrid/: regrid.c  regrid.h
src/stat_log/: log.c  log.h  stat_msg.c  stat_msg.h
td/: README  create_test.h  h_integr_test.c  h_wave_test.h
td/create_grid/: create_grid.c  flag_criterion.c  flagging.c
td/integrate/: boialg.h  step.c
td/ivp/: ivp_1D.c  ivp_1D.h
td/stat_log/: stat_msg.c
test/: CMakeLists.txt  create_test.c  create_test.h  flag_test.c  flag_test.h  h_grid_alloc_test.c  h_grid_alloc_test.h  h_integr_test.c  h_integr_test.h  h_wave_test.c  h_wave_test.h  regrid_test.c  regrid_test.h  rw_test.c  rwave_test.c  set_test.c  set_test.h
